unpackaged/main/default/objects/Barrel__c/Barrel__c.object-meta.xml
<CustomObject>
    <description>Initially created to be utilized in the Single Barrel Program. Stores specific information about a barrel</description>
    <label>Barrel</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Barrel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Barrels</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>test__c</fullName>
        <label>test</label>
    </sharingReasons>
</CustomObject>