unpackaged/main/default/objects/Barrel__c/fields/Barrel_Approved__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once the information is validates on the barrel then this field will be set to true, triggering an email to be sent out</description>
    <label>Barrel Approved</label>
    <type>Checkbox</type>
</CustomField>