unpackaged/main/default/objects/Barrel__c/fields/Barrel_Id__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Id__c</fullName>
    <label>Barrel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>