unpackaged/main/default/objects/Barrel__c/fields/Barrel_Number__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Number__c</fullName>
    <label>Barrel Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>