unpackaged/main/default/objects/Barrel__c/fields/Barrel_Proof__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Proof__c</fullName>
    <label>Barrel Proof</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>