unpackaged/main/default/objects/Barrel__c/fields/Barrel_Recipe__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Recipe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Barrel Recipe</label>
    <referenceTo>Barrel_Recipe__c</referenceTo>
    <relationshipLabel>Barrels</relationshipLabel>
    <relationshipName>Barrels</relationshipName>
    <type>Lookup</type>
</CustomField>