unpackaged/main/default/objects/Barrel__c/fields/Barrel_Registered__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Barrel Registered</label>
    <type>Checkbox</type>
</CustomField>