unpackaged/main/default/objects/Barrel__c/fields/CarrierNew__c.field-meta.xml
<CustomField>
    <fullName>CarrierNew__c</fullName>
    <label>Carrier</label>
    <length>250</length>
    <type>Text</type>
</CustomField>