unpackaged/main/default/objects/Barrel__c/fields/hasShipDate__c.field-meta.xml
<CustomField>
    <fullName>hasShipDate__c</fullName>
    <formula>OR(
  NOT(ISBLANK(Ship_Date__c )),
  NOT(ISNULL(Ship_Date__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasShipDate</label>
    <type>Checkbox</type>
</CustomField>