unpackaged/main/default/objects/Barrel__c/fields/Maker_s_46__c.field-meta.xml
<CustomField>
    <fullName>Maker_s_46__c</fullName>
    <formula>Barrel_Recipe__r.Maker_s_46__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maker's 46</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>