unpackaged/main/default/objects/Barrel__c/fields/Rick__c.field-meta.xml
<CustomField>
    <fullName>Rick__c</fullName>
    <label>Rick</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Warehouse__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Rick</valueSetName>
    </valueSet>
</CustomField>