unpackaged/main/default/objects/Barrel__c/fields/Roasted_French_Mocha__c.field-meta.xml
<CustomField>
    <fullName>Roasted_French_Mocha__c</fullName>
    <formula>Barrel_Recipe__r.Roasted_French_Mocha__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roasted French Mocha</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>