unpackaged/main/default/objects/Barrel__c/recordTypes/Cruzan_Full_Barrel.recordType-meta.xml
<RecordType>
    <fullName>Cruzan_Full_Barrel</fullName>
    <active>true</active>
    <label>Cruzan - Full Barrel</label>
</RecordType>