unpackaged/main/default/objects/Barrel__c/recordTypes/El_Tesoro_Full_Barrel.recordType-meta.xml
<RecordType>
    <fullName>El_Tesoro_Full_Barrel</fullName>
    <active>true</active>
    <label>El Tesoro - Full Barrel</label>
</RecordType>