unpackaged/main/default/objects/Barrel__c/recordTypes/Knob_Creek_Sample_Kit.recordType-meta.xml
<RecordType>
    <fullName>Knob_Creek_Sample_Kit</fullName>
    <active>true</active>
    <label>Knob Creek - Sample Kit</label>
</RecordType>