unpackaged/main/default/objects/Barrel__c/recordTypes/Knob_Creek_Split_Barrel.recordType-meta.xml
<RecordType>
    <fullName>Knob_Creek_Split_Barrel</fullName>
    <active>true</active>
    <label>Knob Creek - Split Barrel</label>
</RecordType>