unpackaged/main/default/objects/Barrel__c/recordTypes/Makers_Mark_Full_Barrel.recordType-meta.xml
<RecordType>
    <fullName>Makers_Mark_Full_Barrel</fullName>
    <active>true</active>
    <label>Makers Mark - Full Barrel</label>
</RecordType>