unpackaged/main/default/objects/Barrel__c/listViews/Cruzan_Single_Barrel_Barrel.listView-meta.xml
<ListView>
    <fullName>Cruzan_Single_Barrel_Barrel</fullName>
    <filterScope>Queue</filterScope>
    <label>Cruzan - Single Barrel</label>
    <queue>Cruzan_Single_Barrel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>