unpackaged/main/default/objects/Barrel__c/listViews/Knob_Creek_Single_Barrel_Barrel.listView-meta.xml
<ListView>
    <fullName>Knob_Creek_Single_Barrel_Barrel</fullName>
    <filterScope>Queue</filterScope>
    <label>Knob Creek - Single Barrel</label>
    <queue>Knob_Creek_Single_Barrel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>