unpackaged/main/default/objects/Barrel__c/listViews/Makers_Mark_Single_Barrel_Barrel.listView-meta.xml
<ListView>
    <fullName>Makers_Mark_Single_Barrel_Barrel</fullName>
    <filterScope>Queue</filterScope>
    <label>Makers Mark - Single Barrel</label>
    <queue>Makers_Mark_Single_Barrel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>